erDiagram
    accounts {
        timestamp_without_time_zone created_at 
        character_varying email UK 
        character_varying first_name 
        integer id PK 
        character_varying last_name 
        character_varying password 
        timestamp_without_time_zone updated_at 
        boolean verified 
    }

    issue_blockers {
        integer blocked_issue_id FK 
        integer blocking_issue_id FK 
        timestamp_without_time_zone created_at 
        integer id PK 
        timestamp_without_time_zone updated_at 
    }

    issue_relationships {
        integer child_issue_id FK 
        timestamp_without_time_zone created_at 
        integer id PK 
        integer parent_issue_id FK 
        timestamp_without_time_zone updated_at 
    }

    issue_labels {
        character_varying color 
        integer id PK 
        integer issue_id FK 
        integer project_id FK 
        character_varying text 
    }

    issues {
        integer assignee_id FK 
        integer author_id FK 
        timestamp_without_time_zone created_at 
        character_varying description 
        integer id PK 
        integer project_id FK 
        character_varying status 
        character_varying title 
        timestamp_without_time_zone updated_at 
    }

    projects {
        integer author_id FK 
        timestamp_without_time_zone created_at 
        character_varying description 
        integer id PK 
        character_varying key UK 
        character_varying name 
        timestamp_without_time_zone updated_at 
    }

    issues }o--|| accounts : "assignee_id"
    issues }o--|| accounts : "author_id"
    projects }o--|| accounts : "author_id"
    issue_blockers }o--|| issues : "blocked_issue_id"
    issue_blockers }o--|| issues : "blocking_issue_id"
    issue_labels }o--|| issues : "issue_id"
    issue_labels }o--|| projects : "project_id"
    issue_relationships }o--|| issues : "child_issue_id"
    issue_relationships }o--|| issues : "parent_issue_id"
    issues }o--|| projects : "project_id"
